--- a/web.config
+++ b/web.config
@@ -6,6 +6,10 @@
   -->
 
 <configuration>
+    <connectionStrings>
+        <add name="cs_TVShows" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TVShows.mdf;Integrated Security=True;User Instance=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.web>
         <roleManager enabled="true" />
       <authentication mode="Forms">
