--- a/Members/Web.config
+++ b/Members/Web.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-    <system.web>
+  <system.net>
+    <mailSettings>
+      <smtp>
+        <network
+             host="email.uiowa.edu"
+             port="587"
+             userName="anwillia"
+             password="hawks3453" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+  
+  <system.web>
 
       <authorization>
 
